--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -207,6 +207,21 @@ $sidebar-display: "sidebar-display";
       margin-top: 0.75rem;
     }
   }
+  &::-webkit-scrollbar-thumb:hover {
+    background: blue;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: coral;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
 } // #sidebar
 
 @media (hover: hover) {
@@ -472,7 +487,7 @@ footer {
   position: absolute;
   bottom: 0;
   padding: 0 1rem;
-  height: $footer-height;
+  height: $footer-height - 2;
   font-size: 0.8rem;
   color: #7a7b7d;
   background-color: var(--footer-bg-color);
@@ -481,7 +496,7 @@ footer {
     width: 95%;
     max-width: 1045px;
     border-top: 1px solid var(--main-border-color);
-    margin-bottom: 1rem;
+    -margin-bottom: 1rem;
     > div {
       width: 350px;
     }
@@ -1294,8 +1309,8 @@ div.post-content .table-wrapper {
   }
 
   #back-to-top {
-    bottom: 6.5rem;
-    right: 4.3rem;
+    bottom: 3.5rem;
+    right: 3.3rem;
   }
 
   #search-input {
