--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,7 @@ layout: page
 
     <div class="post-meta text-muted">
       <!-- posted date -->
-      <i class="far fa-clock fa-fw"></i>
+      <i class="far fa-calendar fa-fw"></i>
       {% include timeago.html date=post.date tooltip=true %}
 
       <!-- page views -->
@@ -75,6 +75,8 @@ layout: page
         <i class="fas fa-spinner fa-spin fa-fw"></i>
       </span>
       {% endif %}
+
+      <i class="far fa-clock fa-fw"></i> <span>{% include reading-time.html %}</span>
     </div>
   </div> <!-- .post-review -->
 
