--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,6 +53,7 @@ layout: default
         <!-- page views -->
         {% if site.google_analytics.pv.enabled %}
         <div>
+          <i class="far fa-eye fa-fw"></i>
           <span id="pv" class="pageviews"><i class="fas fa-spinner fa-spin fa-fw"></i></span>
           views
         </div>
